# C-lisp

./: .gitignore  CMakeLists.txt  Readme.md  demo.lisp  demo_out.c  demo_tree_gc.lisp  demo_tree_gc_out.c  out.c  result.txt  test_macro.lisp  test_macro_out.c  test_transpile.lisp
src/: CMakeLists.txt  builder.c  builder.h  macro.c  macro.h  main.c  transpiler.c  transpiler.h
src/parser/: parser.c  parser.h
src/runtime/: gc.c  gc.h  nucleus.c  nucleus.h
tests/: test_gc.c  test_main.c
